# Axxonsoft-Intern-Project

./: .gitignore  Axxonsoft-Intern-Project.sln  README.md
Axxonsoft-Intern-Project/: Axxonsoft-Intern-Project.cpp  Axxonsoft-Intern-Project.vcxproj  Axxonsoft-Intern-Project.vcxproj.filters
Axxonsoft-Intern-Project/AxxonSoft-Intern-Project/: AxxonSoft-Intern-Project.sln
Code/: CMakeLists.txt  CMakePresets.json
Code/HTTP/include/: Body.hpp  HTTPBuilder.hpp  HTTPDeserializer.hpp  HTTPDocument.hpp  HTTPHandler.hpp  HTTPHeader.hpp  HTTPParser.hpp  HTTPReply.hpp  HTTPReplyMaker.hpp  HTTPReplyParser.hpp  HTTPReplySerializer.cpp  HTTPReplySerializer.hpp  HTTPReplyStatus.hpp  HTTPRequest.hpp  HTTPRequestHandler.hpp  HTTPRequestParser.hpp  HTTPRequestSerializer.hpp  HTTPResplySerializer.hpp  HTTPSerializer.hpp  InvalidHTTPVersionException.hpp  Serializable.hpp  Stock.hpp  checks.hpp
Code/HTTP/src/: HTTPDocument.cpp  HTTPHandler.cpp  HTTPParser.cpp  HTTPReply.cpp  HTTPReplyParser.cpp  HTTPReplySerializer.cpp  HTTPReplyStatus.cpp  HTTPRequest.cpp  HTTPRequestHandler.cpp  HTTPRequestParser.cpp  HTTPRequestSerializer.cpp  HTTPSerializer.cpp  checks.cpp
Code/Server/include/: HTTPHeader.cpp  HTTPHeader.hpp  HTTPParser.hpp  conection.hpp  server.hpp
Code/Server/src/: conection.cpp  main.cpp  server.cpp
Code/enc_temp_folder/e81473cbc46f6756a710941f5a783198/: HTTPRequestHandler.cpp
Code/enc_temp_folder/e965b31410f7179610178cdb5a812438/: HTTPRequestParser.cpp
Code/include/: CmakeLists.txt
Code/include/Client/: CantOpenPostedFileException.hpp  Client.hpp  ClientConnection.hpp  CommandHandler.hpp  CommandParcer.hpp  Config.hpp  InvalidTargetFormatException.hpp  LoginManager.hpp  NoFileToPostException.hpp  command.hpp
Code/include/HTTP/: HTTPDocument.hpp  HTTPHandler.hpp  HTTPHeader.hpp  HTTPHeaderField.hpp  HTTPHeaderValueClass.hpp  HTTPHeaderValueClassField.hpp  HTTPHeaderValueClassFieldArgument.hpp  HTTPParser.hpp  HTTPReply.hpp  HTTPReplyHandler.hpp  HTTPReplyParser.hpp  HTTPReplySerializer.hpp  HTTPRequest.hpp  HTTPRequestHandler.hpp  HTTPRequestParser.hpp  HTTPRequestSerializer.hpp  HTTPSerializator.hpp  HTTPSerializer.hpp  InvalidHTTPVersionException.hpp  Stock.hpp  Target.hpp  URIDecoder.hpp  checks.hpp
Code/include/Server/: AuthPair.hpp  Configuration.hpp  DigestManager.hpp  Session.hpp  SessionManager.hpp  conection.hpp  server.hpp
Code/src/: CmakeLists.txt
Code/src/Client/: CantOpenPostedFileException.cpp  Client.cpp  ClientConnection.cpp  CommandHandler.cpp  CommandParcer.cpp  InvalidTargetFormatException.cpp  NoFileToPostException.cpp  main.cpp
Code/src/HTTP/: HTTPDocument.cpp  HTTPHandler.cpp  HTTPHeader.cpp  HTTPHeaderField.cpp  HTTPHeaderValueClass.cpp  HTTPHeaderValueClassField.cpp  HTTPHeaderValueClassFieldArgument.cpp  HTTPParser.cpp  HTTPReply.cpp  HTTPReplyHandler.cpp  HTTPReplyParser.cpp  HTTPReplySerializer.cpp  HTTPRequest.cpp  HTTPRequestHandler.cpp  HTTPRequestParser.cpp  HTTPRequestSerializer.cpp  HTTPSerializer.cpp  InvalidHTTPVersionException.cpp  Stock.cpp  URIDecoder.cpp  checks.cpp
Code/src/Server/: DigestManager.cpp  Session.cpp  SessionManager.cpp  conection.cpp  main.cpp  server.cpp
